--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -1,7 +1,1 @@
-Section "InputClass"
-	Identifier "devname"
-	Driver "libinput"
-	Option "ClickMethod" "clickfinger"
-	Option "NaturalScrolling" "true"
-	Option "HorizontalScrolling" "true"
-EndSection
+/etc/X11/xorg.conf.d/30-touchpad.conf
