fix symlinks for real

--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -1,1 +1,8 @@
-/etc/X11/xorg.conf.d/30-touchpad.conf
+Section "InputClass"
+	Identifier "devname"
+	Driver "libinput"
+	Option "ClickMethod" "clickfinger"
+	Option "NaturalScrolling" "true"
+	Option "HorizontalScrolling" "true"
+	Option "Tapping" "on"
+EndSection
