add bspwm and sxhkd stuff

--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -3,6 +3,7 @@ Section "InputClass"
 	Driver "libinput"
 	Option "ClickMethod" "clickfinger"
 	Option "NaturalScrolling" "true"
-	Option "HorizontalScrolling" "true"
 	Option "Tapping" "on"
+	Option "HorizontalScrolling" "true"
+	Option "AccelSpeed" "0"
 EndSection
