--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ bindsym XF86AudioPrev exec playerctl previous
 # autostart
 exec --no-startup-id nm-applet
 exec --no-startup-id blueman-applet
-exec --no-startup-id wal -i Pictures/blue-pink-pastel.jpg
+exec --no-startup-id wal -R
 exec --no-startup-id xfce4-panel
 
 # set variables
