--- a/rofi/config
+++ b/rofi/config
@@ -2,11 +2,16 @@ rofi.padding: 70
 rofi.font: Roboto Mono 18
 rofi.bw: 2
 
-# Default theme
-# rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
+! State:           ´bg´,     ´fg´,     ´bgalt´,  ´hlbg´,   ´hlfg´
+rofi.color-normal: #151515,  #ffffff,  #202020,  #ffffff,  #151515
+rofi.color-urgent: #151515,  #ffffff,  #202020,  #ffffff,  #151515
+rofi.color-active: #151515,  #ffffff,  #202020,  #ffffff,  #151515
+
+!                  ´background´, ´border´, ´separator´
+rofi.color-window: #151515,      #ffffff,  #ffffff
 
 # Dark wal theme.
-rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
+# rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
 
 # Light wal theme.
 # rofi.theme: ~/.cache/wal/colors-rofi-light.rasi
