--- a/rofi/config
+++ b/rofi/config
@@ -1,6 +1,10 @@
-rofi.padding: 70
-rofi.font: Roboto Mono 18
+rofi.padding: 64
+!rofi.font: Roboto Mono 18
+rofi.font: Terminus 15
 rofi.bw: 2
+
+rofi.lines: 4
+rofi.width: 32
 
 ! State:           ´bg´,     ´fg´,     ´bgalt´,  ´hlbg´,   ´hlfg´
 rofi.color-normal: #151515,  #ffffff,  #202020,  #ffffff,  #151515
