translate README to english and yeet ranger

--- a/rofi/config
+++ b/rofi/config
@@ -1,6 +1,6 @@
 rofi.padding: 64
-!rofi.font: Roboto Mono 18
-rofi.font: Terminus 15
+rofi.font: Roboto Mono 18
+! rofi.font: Terminus 15
 rofi.bw: 2
 
 rofi.lines: 4
