--- a/rofi/config
+++ b/rofi/config
@@ -7,12 +7,12 @@ rofi.lines: 4
 rofi.width: 32
 
 ! State:           ´bg´,     ´fg´,     ´bgalt´,  ´hlbg´,   ´hlfg´
-rofi.color-normal: #151515,  #ffffff,  #202020,  #ffffff,  #151515
-rofi.color-urgent: #151515,  #ffffff,  #202020,  #ffffff,  #151515
-rofi.color-active: #151515,  #ffffff,  #202020,  #ffffff,  #151515
+rofi.color-normal: #FFFFFF,  #444444,  #FFFFFF,  #444444,  #FFFFFF
+rofi.color-urgent: #FFFFFF,  #444444,  #FFFFFF,  #444444,  #FFFFFF
+rofi.color-active: #FFFFFF,  #444444,  #FFFFFF,  #444444,  #FFFFFF
 
 !                  ´background´, ´border´, ´separator´
-rofi.color-window: #151515,      #ffffff,  #ffffff
+rofi.color-window: #FFFFFF,      #FFFFFF,  #FFFFFF
 
 # Dark wal theme.
 # rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
