--- a/30-touchpad.conf
+++ b/30-touchpad.conf
@@ -1,9 +1,9 @@
 Section "InputClass"
-	Identifier "devname"
+	Identifier "My Touchpad"
 	Driver "libinput"
 	Option "ClickMethod" "clickfinger"
 	Option "NaturalScrolling" "true"
 	Option "Tapping" "on"
 	Option "HorizontalScrolling" "true"
-	Option "AccelSpeed" "0"
+	Option "AccelProfile" "flat"
 EndSection
