--- a/i3/config
+++ b/i3/config
@@ -9,9 +9,9 @@ set $size 11
 # colors
 set_from_resource $fg i3wm.foreground #ffffff
 set_from_resource $bg i3wm.background #000000
-set_from_resource $gray i3wm.color7 #000000
+set_from_resource $gray i3wm.color8 #000000
 set_from_resource $red i3wm.color1 #ff0000
-set_from_resource $acc i3wm.color1 #ff8800
+set_from_resource $acc i3wm.color11 #ff8800
 
 # modifier key
 set $mod Mod4
@@ -55,7 +55,7 @@ font pango: $font $size
 
 # window border colors
 # the order is: border background text indicator child_border
-client.focused          $acc $acc $bg  $acc $acc
+client.focused          $fg $fg $bg  $fg $fg
 client.focused_inactive $gray  $gray  $bg  $gray  $gray
 client.unfocused        $gray  $gray  $bg  $gray  $gray
 client.urgent           $red $red $bg  $red $red
