--- a/i3/config
+++ b/i3/config
@@ -19,6 +19,7 @@ set $mod Mod4
 
 # terminal
 set $term urxvt
+set $altterm xfce4-terminal
 
 # workspace names
 set $ws1 "1"
@@ -40,7 +41,7 @@ exec_always dunst -fn "$font $size" -lb "$bg" -nb "$bg" -cb "$acc" -lf "$fg" -nf
 exec_always compton -c -o 0.1
 # exec nm-applet # network applet
 # exec wal -R # use last applied pywal theme and wallpaper
-exec feh --bg-fill /home/stefan/Downloads/stephen-andrews-1412905-unsplash.jpg
+exec feh --bg-fill /home/stefan/Pictures/backgrounds/oriental-street-dithered.jpg
 
 
 ### Bar/window borders ###
@@ -120,6 +121,7 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $altterm
 bindsym $mod+t exec $term
 
 # kill focused window
