--- a/i3/config
+++ b/i3/config
@@ -25,7 +25,7 @@ set $altterm xfce4-terminal
 set $ws1 "1: term"
 set $ws2 "2: web"
 set $ws3 "3: dev"
-set $ws4 "4"
+set $ws4 "4: comm"
 set $ws5 "5"
 set $ws6 "6"
 set $ws7 "7"
@@ -36,13 +36,14 @@ set $ws10 "10"
 
 ### Autostart ###
 
-# notification daemon
-exec_always dunst -frame_width 2 -frame_color "$acc" -fn "$font $size" -lb "$bg" -nb "$bg" -cb "$acc" -lf "$fg" -nf "$fg" -cf "$bg" -lto 3 -nto 5 -cto 0 -align "center" -padding 16 -horizontal_padding 16
+exec wal -R # use last applied pywal theme and wallpaper
 # exec_always compton -c -o 0.1
 # exec nm-applet # network applet
-# exec wal -R # use last applied pywal theme and wallpaper
 # exec feh --bg-fill /home/stefan/Pictures/backgrounds/oriental-street-dithered.jpg
-exec xsetroot -solid darkgray
+# exec xsetroot -solid darkgray
+
+# notification daemon
+exec dunst -frame_width 2 -frame_color "$acc" -fn "$font $size" -lb "$bg" -nb "$bg" -cb "$acc" -lf "$fg" -nf "$fg" -cf "$bg" -lto 3 -nto 5 -cto 0 -align "center" -padding 16 -horizontal_padding 16
 
 
 ### Bar/window borders ###
@@ -53,10 +54,10 @@ font pango: $font $size
 # window border colors
 # the order is:         border background text  indicator child_border
 client.focused          $fg    $fg        $bg   $fg       $fg
-client.focused_inactive $fg    $fg        $gray $bg       $bg
-client.unfocused        $fg    $fg        $gray $bg       $bg
+client.focused_inactive $bg    $bg        $gray $bg       $bg
+client.unfocused        $bg    $bg        $gray $bg       $bg
 client.urgent           $red   $red       $fg   $red      $red
-client.placeholder      $fg    $fg        $gray $bg       $bg
+client.placeholder      $bg    $bg        $gray $bg       $bg
 client.background       $bg
 
 # hide borders when full screen
@@ -78,7 +79,7 @@ bar {
         active_workspace   $bg $bg $fg
         inactive_workspace $bg $bg $fg
         urgent_workspace   $red $red $white
-        binding_mode       $acc $acc $white
+        binding_mode       $acc $acc $bg
     }
 }
 
