xfce4 is pretty nice :)

--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,7 @@
 
 # font
 # "Monospace" is usually installed already
-set $font Monospace
+set $font Terminus
 set $size 10
 
 # colors
@@ -12,7 +12,7 @@ set_from_resource $black i3wm.color0 #000000
 set_from_resource $gray i3wm.color8 #888888
 set_from_resource $white i3wm.color7 #ffffff
 set_from_resource $red i3wm.color1 #ff0000
-set_from_resource $acc i3wm.color3 #ff8800
+set_from_resource $acc i3wm.color1 #ff8800
 
 # modifier key
 set $mod Mod4
