--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,4 +5,4 @@ set -sg escape-time 0
 set -g base-index 1
 setw -g pane-base-index 1
 
-set-window-option -g mode-keys vi 
+# set-window-option -g mode-keys vi 
